4.x/build-strategies/binary-build/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binary-build
  labels:
    app: binary-build
spec:
  replicas: 1
  selector:
    matchLabels:
      app: binary-build
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: binary-build
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/build-strategies/binary-build
        name: binary-build
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8001
          initialDelaySeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8001
          initialDelaySeconds: 60
          timeoutSeconds: 10          
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
      restartPolicy: Always
