4.x/build-strategies/binary-build/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: binary-build
  labels:
    app: binary-build     
spec:
  type: ClusterIP
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: binary-build
